
[TestPrintCycloneDX15Results_WithDependencies/multiple_sources_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  }
}

---

[TestPrintCycloneDX15Results_WithDependencies/no_sources - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  }
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_multiple_artifacts,_used_by_one_of_them - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:maven/dev.foo/lib1@1.0-SNAPSHOT",
      "type": "library",
      "name": "dev.foo:lib1",
      "version": "1.0-SNAPSHOT",
      "purl": "pkg:maven/dev.foo/lib1@1.0-SNAPSHOT",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "pom.xml"
        }
      ]
    },
    {
      "bom-ref": "pkg:maven/dev.foo/lib2@1.0-SNAPSHOT",
      "type": "library",
      "name": "dev.foo:lib2",
      "version": "1.0-SNAPSHOT",
      "purl": "pkg:maven/dev.foo/lib2@1.0-SNAPSHOT",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "pom.xml"
        }
      ]
    }
  ],
  "dependencies": [
    {
      "ref": "pom.xml",
      "dependsOn": [
        "lib1/pom.xml",
        "lib2/pom.xml"
      ]
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  }
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_one_artifact,_no_dependsOn - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:maven/com.nobody/mine1@1.2.3",
      "type": "library",
      "name": "com.nobody:mine1",
      "version": "1.2.3",
      "purl": "pkg:maven/com.nobody/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "pom.xml"
        }
      ]
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_one_artifact,_one_dependsOn - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:maven/com.nobody/mine1@1.2.3",
      "type": "library",
      "name": "com.nobody:mine1",
      "version": "1.2.3",
      "purl": "pkg:maven/com.nobody/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "pom.xml"
        }
      ]
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_one_package,_no_artifacts - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/com.nobody%3Amine1@1.2.3",
      "type": "library",
      "name": "com.nobody:mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/com.nobody%3Amine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_one_package,_two_exclusions - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:maven/org.apache.maven/maven-artifact@1.2.1",
      "type": "library",
      "name": "org.apache.maven:maven-artifact",
      "version": "1.2.1",
      "purl": "pkg:maven/org.apache.maven/maven-artifact@1.2.1",
      "properties": [
        {
          "name": "datadog-sbom-generator:exclusion",
          "value": "org.example:example-artifact1"
        },
        {
          "name": "datadog-sbom-generator:exclusion",
          "value": "org.example:*"
        },
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/pom.xml"
        },
        {
          "name": "osv-scanner:is-dev",
          "value": "true"
        }
      ]
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/multiple_sources_with_a_mixed_count_of_packages,_some_called_vulnerabilities_and_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        },
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/third/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "purl": "pkg:npm/mine1@1.3.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/third/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "purl": "pkg:npm/mine2@3.2.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "purl": "pkg:npm/mine3@0.4.1",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    },
    {
      "id": "OSV-2",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities_and_license_violations - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        },
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/third/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "purl": "pkg:npm/mine1@1.3.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/third/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "purl": "pkg:npm/mine2@3.2.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "purl": "pkg:npm/mine3@0.4.1",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    },
    {
      "id": "OSV-2",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/one_source_with_one_package,_one_called_vulnerability,_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/one_source_with_one_package,_one_uncalled_vulnerability,_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/one_source_with_one_package,_one_vulnerability,_and_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithMixedIssues/two_sources_with_packages,_one_vulnerability,_one_license_violation - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine2@5.9.0",
      "type": "library",
      "name": "mine2",
      "version": "5.9.0",
      "purl": "pkg:npm/mine2@5.9.0",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_grouped_packages,_and_multiple_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "purl": "pkg:npm/mine1@1.2.2",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "purl": "pkg:npm/mine2@3.2.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "purl": "pkg:npm/mine3@0.4.1",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    },
    {
      "id": "OSV-2",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "credits": {}
    },
    {
      "id": "OSV-3",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "credits": {}
    },
    {
      "id": "OSV-5",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_and_multiple_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "purl": "pkg:npm/mine1@1.2.2",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "purl": "pkg:npm/mine2@3.2.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "purl": "pkg:npm/mine3@0.4.1",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    },
    {
      "id": "OSV-2",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "credits": {}
    },
    {
      "id": "OSV-3",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "credits": {}
    },
    {
      "id": "OSV-5",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_no_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        },
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/third/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "purl": "pkg:npm/mine1@1.3.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/third/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "purl": "pkg:npm/mine2@3.2.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "purl": "pkg:npm/mine3@0.4.1",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        },
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/third/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine1@1.3.5",
      "type": "library",
      "name": "mine1",
      "version": "1.3.5",
      "purl": "pkg:npm/mine1@1.3.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/third/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "purl": "pkg:npm/mine2@3.2.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine3@0.4.1",
      "type": "library",
      "name": "mine3",
      "version": "0.4.1",
      "purl": "pkg:npm/mine3@0.4.1",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    },
    {
      "id": "OSV-2",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_and_multiple_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:composer/author1/mine1@1.2.3",
      "type": "library",
      "name": "author1/mine1",
      "version": "1.2.3",
      "purl": "pkg:composer/author1/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:composer/author3/mine3@0.4.1",
      "type": "library",
      "name": "author3/mine3",
      "version": "0.4.1",
      "purl": "pkg:composer/author3/mine3@0.4.1",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "purl": "pkg:npm/mine1@1.2.2",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:nuget/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "purl": "pkg:nuget/mine2@3.2.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    },
    {
      "id": "OSV-2",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "credits": {}
    },
    {
      "id": "OSV-3",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "credits": {}
    },
    {
      "id": "OSV-5",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_and_multiple_vulnerabilities,_but_some_uncalled - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:composer/author1/mine1@1.2.3",
      "type": "library",
      "name": "author1/mine1",
      "version": "1.2.3",
      "purl": "pkg:composer/author1/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:composer/author3/mine3@0.4.1",
      "type": "library",
      "name": "author3/mine3",
      "version": "0.4.1",
      "purl": "pkg:composer/author3/mine3@0.4.1",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine1@1.2.2",
      "type": "library",
      "name": "mine1",
      "version": "1.2.2",
      "purl": "pkg:npm/mine1@1.2.2",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:nuget/mine2@3.2.5",
      "type": "library",
      "name": "mine2",
      "version": "3.2.5",
      "purl": "pkg:nuget/mine2@3.2.5",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    },
    {
      "id": "OSV-2",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something less scary!",
      "credits": {}
    },
    {
      "id": "OSV-3",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something mildly scary!",
      "credits": {}
    },
    {
      "id": "OSV-5",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/multiple_sources_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  }
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/no_sources - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  }
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  }
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package,_no_vulnerabilities - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package,_one_uncalled_vulnerability,_and_one_called_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "GHSA-123",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scarier!",
      "credits": {}
    },
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_one_called_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_one_uncalled_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability_(dev) - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_uncalled_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "GHSA-123",
      "references": [
        {
          "id": "OSV-1",
          "source": {}
        }
      ],
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    },
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "GHSA-123",
      "references": [
        {
          "id": "OSV-1",
          "source": {}
        }
      ],
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    },
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/one_source_with_vulnerabilities,_some_missing_content - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine3@0.10.2-rc",
      "type": "library",
      "name": "mine3",
      "version": "0.10.2-rc",
      "purl": "pkg:npm/mine3@0.10.2-rc",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "detail": "This vulnerability allows for some very scary stuff to happen - seriously, you'd not believe it!",
      "credits": {}
    },
    {
      "id": "OSV-2",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/two_sources_with_packages,_one_vulnerability - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        }
      ]
    },
    {
      "bom-ref": "pkg:npm/mine2@5.9.0",
      "type": "library",
      "name": "mine2",
      "version": "5.9.0",
      "purl": "pkg:npm/mine2@5.9.0",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithVulnerabilities/two_sources_with_the_same_vulnerable_package - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "metadata": {
    "tools": {
      "components": [
        {
          "type": "application",
          "group": "datadog",
          "name": "datadog-sbom-generator",
          "version": "1.0.1"
        }
      ]
    }
  },
  "components": [
    {
      "bom-ref": "pkg:npm/mine1@1.2.3",
      "type": "library",
      "name": "mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/mine1@1.2.3",
      "properties": [
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/first/lockfile"
        },
        {
          "name": "datadog-sbom-generator:lockfile-filepath",
          "value": "path/to/my/second/lockfile"
        }
      ]
    }
  ],
  "vulnerabilities": [
    {
      "id": "OSV-1",
      "ratings": [
        {
          "method": "other",
          "vector": "1"
        }
      ],
      "description": "Something scary!",
      "credits": {}
    }
  ]
}

---
